# config

./: .gitignore  .gitmodules  Xdefaults  bashrc  dircolors  gdbinit  gitconfig  screenrc  vimrc  vimrc-coc  vimrc-medium  vimrc-simple
bash/: functions  host-template  m1-max  pn2200367  rainbow  u22  u22-pro
bash.d/: Carbon-X1  cn  colors  darwin  flecsi-ci  functions  lanl-proxy  loft-u24  loft1934446  loft2407940  m1-max  pn2006366  pn2200367  pn2307805  pn2500417  rzvernal  scratch  u22  u22-m2  u22-pro  u24-loft  u24-m1  u24-m2
bash.d/themes/: beach  black-and-blue  bluegreen  blueish  disabled  gray  lanl-black  lanl-red  minimal  rainbow  red-orange  template
bash/themes/: host-template  lanl-red  template
iTerm2/: com.googlecode.iterm2.plist
iTerm2/LANL-MacBook/: com.googlecode.iterm2.plist
iTerm2/farer/: com.googlecode.iterm2.plist
iTerm2/little-bear/: com.googlecode.iterm2.plist
iTerm2/loft/: com.googlecode.iterm2.plist
iTerm2/m1-max/: com.googlecode.iterm2.plist
iTerm2/m1-max-ad/: com.googlecode.iterm2.plist
iTerm2/m2-max/: com.googlecode.iterm2.plist
iTerm2/m2-max-ad/: com.googlecode.iterm2.plist
iTerm2/m4-max/: com.googlecode.iterm2.plist
iTerm2/medium/: com.googlecode.iterm2.plist
iTerm2/pro/: com.googlecode.iterm2.plist
iTerm2/pro-ad/: com.googlecode.iterm2.plist
iTerm2/small/: com.googlecode.iterm2.plist
modulefiles/: aliases  darwin-aliases  lanl-tunnels  local-tunnels
notes/: TODO.md
notes.bak/: 2024-05-28.md  TODO.md
notes/lanl/: index.norg
notes/notes/: TODO.norg
notes/personal/: index.norg
nvim/: init.lua  lazy-lock.json  nvim-pack-lock.json  obsidian-nvim-keymaps-cheatsheet.md
nvim-examples/nvim-bergen/: init.lua  lazy-lock.json
nvim-old/lua/: keymaps-pre.lua  options.lua
nvim/lua/: autocmds.lua  filetypes.lua  health.lua  keymaps-post.lua  keymaps-pre.lua  keymaps.lua  options.lua  packages.lua
obsidian-vault/: Home.md
obsidian-vault/notes/: TODO.md
password-store/: .gpg-id  codex.gpg  overleaf.gpg  pypi.gpg  sonnet.gpg
password-store/darwin/: claude.gpg  darwin.gpg  sambanova-orig.gpg  sambanova-team.gpg
password-store/lanl/: codex.gpg  guest.gpg
password-store/openai/: codex.gpg
spack/: barchetta-hpx.yaml  barchetta-legion.yaml  barchetta-mpi.yaml  radio.yaml
test/autodiff/: CMakeLists.txt
test/cholesky/: main.cc
test/lapack/: CMakeLists.txt  main.cc
test/mfem/: CMakeLists.txt  main.cc
test/ranges/: CMakeLists.txt  main.cc
test/user-fields/: CMakeLists.txt  driver.cc  spec.hh  types.hh
(+163 files in other folders)
